Fixed navbar clipping

--- a/src/style/less/main.less
+++ b/src/style/less/main.less
@@ -75,7 +75,6 @@ nav {
 	@media only screen and (min-width : 320px) and (max-width : 991px) {
 		padding: 0 !important;
 		margin: 0 !important;
-		margin-top: -18px !important;
 	}
 }
 // NAVIGATION
